src/test/ui/issues/issue-51244.nll.stderr
error[E0594]: cannot assign to `*my_ref` which is behind a `&` reference
  --> $DIR/issue-51244.rs:3:5
   |
LL |     let ref my_ref @ _ = 0;
   |         -------------- help: consider changing this to be a mutable reference: `ref mut my_ref @ _`
LL |     *my_ref = 0; //~ ERROR cannot assign to immutable borrowed content `*my_ref` [E0594]
   |     ^^^^^^^^^^^ `my_ref` is a `&` reference, so the data it refers to cannot be written

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
